added second project - fixed carousel issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,6 +426,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #0098D5;
 }
 
+.carousel-inner {
+  height: 500px
+}
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
