--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1928,3 +1928,13 @@ section {
   font-size: 22px;
   font-weight: bolder;
 }
+
+/*--------------------------------------------------------------
+# BG
+--------------------------------------------------------------*/
+.BG {
+  /*background:gray;*/
+  width: 200px;
+  height: 200px;
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>❤️</text></svg>") 16 0,auto; /*!emojicursor.app*/
+}
