--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -849,7 +849,7 @@ section {
 --------------------------------------------------------------*/
 .projects .progress {
   margin-bottom:5px;
-  height: 20px; 
+  height: 20px;
   width: 800px;
 }
 
@@ -2025,4 +2025,8 @@ section {
 
 .team .memberBG .social a + a {
   margin-left: 8px;
+}
+
+.memberBG2 {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🥁</text></svg>") 16 0,auto;
 }
