fixed bug of logo dims on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,7 +536,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .img-fluid{
-  max-width: 150%;
+  max-width: 130%;
+  height: auto;
 }
 
 @media (max-width: 575px) {
