--- a/assets/css/style_orange.css
+++ b/assets/css/style_orange.css
@@ -2051,3 +2051,15 @@ section {
 .memberBG2 {
   cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🥁</text></svg>") 16 0,auto;
 }
+
+.memberBG3 {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🐒</text></svg>") 16 0,auto;
+}
+
+.memberBG4 {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='60' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>☕🔝</text></svg>") 16 0,auto;
+}
+
+.memberBG5 {
+  cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='60' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🐻</text></svg>") 16 0,auto;
+}
